@@ -313,7 +313,7 @@
           commit: true
         static:
           - latest
-          - airflow_2.10.2
+          - airflow_2.10.4
 
 - job:
     name: deckhand-docker-tag-ubuntu_jammy
