@@ -15,7 +15,7 @@
 apiVersion: v1
 description: A Helm chart for Deckhand
 name: deckhand
-version: 0.2.2
+version: 0.2.3
 appVersion: 1.1.0
 keywords:
 - deckhand
