@@ -13,10 +13,12 @@
 # limitations under the License.
 
 import falcon
+
 import six
 from oslo_log import log as logging
 from oslo_utils import excutils
 
+from deckhand.common import utils
 from deckhand.control import base as api_base
 from deckhand.engine.revision_diff import revision_diff
 from deckhand import errors
@@ -50,4 +52,4 @@ class RevisionDiffingResource(api_base.BaseResource):
                 LOG.exception(message)
 
         resp.status = falcon.HTTP_200
-        resp.text = resp_body
+        resp.text = utils.safe_yaml_dump(resp_body)
