@@ -13,6 +13,7 @@
 # limitations under the License.
 
 import falcon
+
 from oslo_log import log as logging
 import six
 
@@ -81,7 +82,7 @@ class RevisionDocumentsResource(api_base.BaseResource):
             documents = documents[:limit]
 
         resp.status = falcon.HTTP_200
-        resp.text = self.view_builder.list(documents)
+        resp.text = utils.safe_yaml_dump(self.view_builder.list(documents))
 
 
 class RenderedDocumentsResource(api_base.BaseResource):
@@ -156,4 +157,5 @@ class RenderedDocumentsResource(api_base.BaseResource):
             rendered_documents = rendered_documents[:limit]
 
         resp.status = falcon.HTTP_200
-        resp.text = self.view_builder.list(rendered_documents)
+        resp.text = utils.safe_yaml_dump(
+            self.view_builder.list(rendered_documents))
