@@ -13,6 +13,7 @@
 # limitations under the License.
 
 import falcon
+
 from oslo_log import log as logging
 from oslo_utils import excutils
 
@@ -61,7 +62,7 @@ class RevisionsResource(api_base.BaseResource):
 
         revision_resp = self.view_builder.show(revision)
         resp.status = falcon.HTTP_200
-        resp.text = revision_resp
+        resp.text = utils.safe_yaml_dump(revision_resp)
 
     @policy.authorize('deckhand:list_revisions')
     @common.sanitize_params(['tag', 'order', 'sort'])
@@ -74,7 +75,7 @@ class RevisionsResource(api_base.BaseResource):
             revisions = utils.multisort(revisions, sort_by, order_by)
 
         resp.status = falcon.HTTP_200
-        resp.text = self.view_builder.list(revisions)
+        resp.text = utils.safe_yaml_dump(self.view_builder.list(revisions))
 
     def _delete_all_barbican_secrets(self):
         filters = {'metadata.storagePolicy': 'encrypted'}
