@@ -1,69 +1,69 @@
-alembic==1.13.2
-amqp==5.2.0
+alembic==1.14.0
+amqp==5.3.1
 attrs==24.2.0
 autopage==0.5.2
-barbican==16.0.0
-bcrypt==4.2.0
+barbican==18.0.0
+bcrypt==4.2.1
 Beaker==1.13.0
 cachetools==5.5.0
-castellan==5.1.1
+castellan==5.2.0
 certifi==2024.8.30
 cffi==1.17.1
-charset-normalizer==3.3.2
-cliff==4.7.0
-cmd2==2.4.3
+charset-normalizer==3.4.0
+cliff==4.8.0
+cmd2==2.5.8
 cryptography==42.0.8
 debtcollector==3.0.0
 decorator==5.1.1
-deepdiff==8.0.1
-dnspython==2.6.1
+deepdiff==8.1.1
+dnspython==2.7.0
 dogpile.cache==1.3.3
-eventlet==0.37.0
-falcon==3.1.3
+eventlet==0.38.1
+falcon==4.0.2
 fasteners==0.19
 fixtures==4.1.0
 futurist==3.0.0
-greenlet==3.1.0
+greenlet==3.1.1
 html5lib==0.9999999
 httpexceptor==1.4.0
 idna==3.10
 iso8601==2.1.0
 Jinja2==3.1.4
-jsonpath-ng==1.6.1
-jsonpickle==3.3.0
+jsonpath-ng==1.7.0
+jsonpickle==3.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-keystoneauth1==5.1.2
-keystonemiddleware==10.2.0
-kombu==5.4.1
+keystoneauth1==5.6.0
+keystonemiddleware==10.6.0
+kombu==5.4.2
 ldap3==2.9.1
 logutils==0.3.5
-Mako==1.3.5
-MarkupSafe==2.1.5
+Mako==1.3.8
+MarkupSafe==3.0.2
 microversion-parse==2.0.0
 msgpack==1.1.0
 netaddr==1.3.0
 netifaces==0.11.0
-networkx==3.3
-orderly-set==5.2.2
+networkx==3.4.2
+orderly-set==5.2.3
 os-service-types==1.7.0
-oslo.cache==3.3.1
-oslo.concurrency==5.1.1
-oslo.config==9.1.1
-oslo.context==5.1.1
-oslo.db==12.3.1
-oslo.i18n==6.0.0
-oslo.log==5.2.0
-oslo.messaging==14.2.4
-oslo.metrics==0.6.0
-oslo.middleware==5.1.1
-oslo.policy==4.1.1
-oslo.serialization==5.1.1
-oslo.service==3.1.1
-oslo.upgradecheck==2.1.1
-oslo.utils==6.1.0
-oslo.versionedobjects==3.1.0
-packaging==24.1
+oslo.cache==3.7.0
+oslo.concurrency==6.0.0
+oslo.config==9.4.0
+oslo.context==5.5.0
+oslo.db==15.0.0
+oslo.i18n==6.3.0
+oslo.log==5.5.1
+oslo.messaging==14.7.2
+oslo.metrics==0.8.0
+oslo.middleware==6.1.0
+oslo.policy==4.3.0
+oslo.serialization==5.4.1
+oslo.service==3.4.1
+oslo.upgradecheck==2.3.0
+oslo.utils==7.1.0
+oslo.versionedobjects==3.3.0
+packaging==24.2
 Paste==3.10.1
 PasteDeploy==3.1.0
 PasteScript==3.6.0
@@ -71,19 +71,20 @@ pbr==6.1.0
 pecan==1.5.1
 pip==24.1
 ply==3.11
-prettytable==3.11.0
-prometheus_client==0.20.0
-psycopg2-binary==2.9.9
+prettytable==3.12.0
+prometheus_client==0.21.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pycadf==3.1.1
+pycadf==4.0.0
 pycparser==2.22
+PyJWT==2.10.1
 pylibyaml==0.1.0
-pyOpenSSL==24.2.1
-pyparsing==3.1.4
+pyOpenSSL==24.3.0
+pyparsing==3.2.0
 pyperclip==1.9.0
-python-barbicanclient==5.5.0
+python-barbicanclient==5.7.0
 python-dateutil==2.9.0.post0
-python-keystoneclient==5.1.0
+python-keystoneclient==5.4.0
 python-memcached==1.62
 python-mimeparse==2.0.0
 pytz==2024.2
@@ -94,29 +95,27 @@ requests==2.32.3
 resolver==0.2.1
 rfc3986==2.0.0
 Routes==2.5.1
-rpds-py==0.20.0
+rpds-py==0.22.3
 selector==0.10.1
 setuptools==70.1.0
 simplejson==3.19.3
-six==1.16.0
+six==1.17.0
 SQLAlchemy==1.4.54
-sqlalchemy-migrate==0.13.0
-sqlparse==0.5.1
 statsd==4.0.1
-stevedore==5.3.0
-Tempita==0.5.2
+stevedore==5.4.0
 testresources==2.0.1
 testscenarios==0.5.0
 testtools==2.7.2
 tiddlyweb==2.4.3
 typing_extensions==4.12.2
-urllib3==2.2.2
-uWSGI==2.0.27
+tzdata==2024.2
+urllib3==2.2.3
+uWSGI==2.0.28
 vine==5.1.0
 wcwidth==0.2.13
-WebOb==1.8.8
+WebOb==1.8.9
 Werkzeug==2.2.3
 wheel==0.43.0
-wrapt==1.16.0
+wrapt==1.17.0
 xattr==0.10.1
-yappi==1.6.0
+yappi==1.6.10
