@@ -34,7 +34,7 @@ passenv =
 deps =
   -r{toxinidir}/requirements-frozen.txt
   -r{toxinidir}/test-requirements.txt
-  -c https://raw.githubusercontent.com/apache/airflow/constraints-2.10.2/constraints-3.10.txt
+  -c https://raw.githubusercontent.com/apache/airflow/constraints-2.10.4/constraints-3.10.txt
 commands =
   find . -type f -name "*.pyc" -delete
   rm -Rf .testrepository/times.dbm
@@ -54,7 +54,7 @@ allowlist_externals=
   sh
 deps=
   -r{toxinidir}/requirements-direct.txt
-  -c https://raw.githubusercontent.com/apache/airflow/constraints-2.10.2/constraints-3.10.txt
+  -c https://raw.githubusercontent.com/apache/airflow/constraints-2.10.4/constraints-3.10.txt
 commands=
   rm -f requirements-frozen.txt
   sh -c "pip freeze --all | grep -vE 'deckhand|pyinotify|pkg-resources==0.0.0' > requirements-frozen.txt"
